tests/paczka1/fuzzy1/57167775.err
Error in line 8: dCULukMW S607 7,5
Error in line 16: A391 S576 21,9
Error in line 13: dCULukMW A391 88,7
Error in line 18: dCULukMW S607 73,7
Error in line 26: A391 S607 70,1
